test/fail/unused-switch-in-catch.mo
module {
    public func test() : async () {
        try {} catch exception {
            switch exception {
                case unused {
                    assert false;
                };
            };
        };
    };
};
